* alias.c (find_base_term, case ZERO_EXTEND, case SIGN_EXTEND): 	Make same change as for find_base_value.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49730 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed Feb 13 09:45:08 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* alias.c (find_base_term, case ZERO_EXTEND, case SIGN_EXTEND):
+	Make same change as for find_base_value.
+
 2002-02-13  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.h (MODES_TIEABLE_P): Accept a combination
