* config/alpha/t-vms (MULTILIB_OPTIONS): Define. 	(MULTILIB_DIRNAME, LIBGCC, INSTALL_LIBGCC): Likewise. 	* config/alpha/vms.h (ASM_FILE_START): Write .arch directive.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49731 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-13  Douglas B Rupp  <rupp@gnat.com>
+
+	* config/alpha/t-vms (MULTILIB_OPTIONS): Define.
+	(MULTILIB_DIRNAME, LIBGCC, INSTALL_LIBGCC): Likewise.
+	* config/alpha/vms.h (ASM_FILE_START): Write .arch directive.
+
 Wed Feb 13 09:45:08 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* alias.c (find_base_term, case ZERO_EXTEND, case SIGN_EXTEND):
