* mkconfig.sh: Avoid using a subshell redirect. 	($output.T): Change to $(output)T. 	(ENABLE_NLS): Remove unneeded undef.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49734 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-02-13  Douglas B Rupp  <rupp@gnat.com>
 
+	* mkconfig.sh: Avoid using a subshell redirect.
+	($output.T): Change to $(output)T.
+	(ENABLE_NLS): Remove unneeded undef.
+
 	* config/alpha/vms.h (MD_EXEC_PREFIX, MD_STARTFILE_PREFIX): Define.
 	* config/alpha/x-vms (libsubdir): Define.
 
