2002-02-13  Martin Kahlert  <martin.kahlert@infineon.com>
	* jni.cc (_Jv_JNI_AttachCurrentThread): env->locals assigned
	correctly.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49737 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-13  Martin Kahlert  <martin.kahlert@infineon.com>
+
+	* jni.cc (_Jv_JNI_AttachCurrentThread): env->locals assigned
+	correctly.
+
 2002-02-13  Todd Stock  <toddastock@yahoo.com>
 
 	Fix for PR libgcj/5671:
