--- a/gcc-3_0-branch/gcc/cp/ChangeLog
+++ b/gcc-3_0-branch/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-13  Richard Smith <richard@ex-parrot.com>
+
+	* decl.c (maybe_build_cleanup): Do not destroy thunk parameters.
+
 2002-01-31  Jason Merrill  <jason@redhat.com>
 
 	PR c++/3395
