--- a/gcc-3_0-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_0-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-13  Richard Smith <richard@ex-parrot.com>
+
+	* g++.old-deja/g++.other/thunk1.C: New test.
+
 2002-01-31  Bob Wilson  <bob.wilson@acm.org>
 
 	* gcc.c-torture/compile/20001226-1.x: xfail for Xtensa.
