2002-02-13  Jeroen Dobbelaere  <jeroen.dobbelaere@acunia.com>
	* config/arm/linux-elf.h (CPLUSPLUS_CPP_SPEC): Define.
	Required for libstdc++ to work with glibc.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49744 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-13  Jeroen Dobbelaere  <jeroen.dobbelaere@acunia.com>
+
+	* config/arm/linux-elf.h (CPLUSPLUS_CPP_SPEC): Define.
+	Required for libstdc++ to work with glibc.
+
 2002-02-08  Philip Blundell  <pb@nexus.co.uk>
 
 	Fix PR 5209:
