PR optimization/5547: 	* config/i386/i386.c (i386_simplify_dwarf_addr): Simplify 	all valid IA-32 address modes involving non-scaled %ebx and 	GOT/GOTOFF as displacement.
	* g++.dg/other/debug3.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49745 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-13  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/other/debug3.C: New test.
+
 2002-02-13  Richard Smith <richard@ex-parrot.com>
 
 	* g++.old-deja/g++.other/thunk1.C: New test.
