--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2002-02-14  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config/rs6000/rs6000.md ("*movv4si_internal"): Add m<-r and r<-r
+        alternatives.
+        ("*movv8hi_internal1"): Same.
+        ("*movv16qi_internal1"): Same.
+        ("*movv4sf_internal1"): Same.
+
+        * config/rs6000/rs6000.c (rs6000_legitimize_reload_address): Do
+        not push_reload for altivec modes.
+
 2002-02-13	Joel Sherrill <joel@OARcorp.com>
 
 	* config.gcc (a29k-*-rtems), config/a29k/rtems.h: General cleanup across
