--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-02-14  Aldy Hernandez  <aldyh@redhat.com>
 
+        * config/rs6000/darwin.h (ROUND_TYPE_ALIGN): Adjust for vectors.
+
+        * config/rs6000/sysv4.h (ROUND_TYPE_ALIGN): Add MAX.
+
+2002-02-14  Aldy Hernandez  <aldyh@redhat.com>
+
         * config/rs6000/rs6000.md ("*movv4si_internal"): Add m<-r and r<-r
         alternatives.
         ("*movv8hi_internal1"): Same.
