--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-13  Eric Christopher  <echristo@redhat.com>
+
+	* config/mips/mips.c (override_options): Add check for march/mipsX
+	on the same command line. Fix error message in cpu processing.
+	Remove architecture and ISA checks.
+
 2002-02-14  Aldy Hernandez  <aldyh@redhat.com>
 
         * config/rs6000/darwin.h (ROUND_TYPE_ALIGN): Adjust for vectors.
