--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,5 +1,9 @@
 2002-02-13  Toon Moene  <toon@moene.indiv.nluug.nl>
 
+	* news.texi: List Problem Reports fixed in 3.1.
+
+2002-02-13  Toon Moene  <toon@moene.indiv.nluug.nl>
+
 	* data.c (ffedata_eval_offset_): Only convert index,
 	low and high bound in data statements to default integer
 	if they are constants.  Use a copy of the data structure.
