--- a/gcc/f/news.texi
+++ b/gcc/f/news.texi
@@ -1,4 +1,5 @@
-@c Copyright (C) 1995, 1996, 1997, 1998, 1999, 2000, 2001 Free Software Foundation, Inc.
+@c Copyright (C) 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002
+@c  Free Software Foundation, Inc.
 @c This is part of the G77 manual.
 @c For copying conditions, see the file g77.texi.
 
@@ -7,9 +8,9 @@
 
 @c Keep this the same as the dates above, since it's used
 @c in the standalone derivations of this file (e.g. NEWS).
-@set copyrights-news 1995,1996,1997,1998,1999,2000,2001
+@set copyrights-news 1995,1996,1997,1998,1999,2000,2001,2002
 
-@set last-update-news 2001-11-20
+@set last-update-news 2002-02-13
 
 @include root.texi
 
@@ -152,8 +153,31 @@ is available at
 
 The following information was last updated on @value{last-update-news}:
 
-@heading In development, 0.5.27, @code{GCC} 3.1 versus @code{GCC} 3.0:
+@heading In 0.5.27, @code{GCC} 3.1 versus @code{GCC} 3.0:
 @itemize @bullet
+@item
+Problem Reports fixed (in chronological order of submission):
+@enumerate
+@item
+ 947 Data statement initialization with subscript of kind INTEGER*2
+@item
+3743 Reference to intrinsic `ISHFT' invalid
+@item
+3807 Function BESJN(integer,double) problems
+@item
+3957 g77 -pipe -xf77-cpp-input sends output to stdout
+@item
+4279 g77 -h" gives bogus output
+@item
+4752 g77 -v -c -xf77-version /dev/null -xnone causes ice
+@item
+4885 BACKSPACE example that doesn't work as of gcc/g77-3.0.x
+@item
+5122 g77 rejects accepted use of INTEGER*2 as type of DATA statement loop index
+@item
+5473 ICE on BESJN(integer*8,real)
+@end enumerate
+
 @item
 @command{g77} now has its man page generated from the texinfo documentation,
 to guarantee that it remains up to date.
