--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-14  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/noncompile/20020213-1.c: New test.
+
 2002-02-13  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/other/debug3.C: New test.
