--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-14  Hans-Peter Nilsson  <hp@axis.com>
+
+	* config.gcc (c4x-*-rtems*): Fix typo in tm_file setting.
+
 2002-02-14  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/5503:
