--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-02-14  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300-protos.h: Update the prototype for
+	const_costs.
+	* config/h8300/h8300.c (const_costs): Treat SET as a little
+	more expensive operation.
+	* config/h8300/h8300.h (DEFAULT_RTX_COSTS): Update the
+	reference to const_costs.
+
 2002-02-14  Hans-Peter Nilsson  <hp@axis.com>
 
 	* config.gcc (c4x-*-rtems*): Fix typo in tm_file setting.
