2002-02-14  Martin Kahlert  <martin.kahlert@infineon.com>
	* include/jni.h: Fix typo.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49767 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-14  Martin Kahlert  <martin.kahlert@infineon.com>
+
+	* include/jni.h: Fix typo.
+
 2002-02-13  Martin Kahlert  <martin.kahlert@infineon.com>
 
 	* jni.cc (_Jv_JNI_AttachCurrentThread): env->locals assigned
