--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-13  Todd Stock  <toddastock@yahoo.com>
+
+	Fix for PR libgcj/5670:
+	* verify.cc (is_assignable_from_slow): If `source' is interface,
+	recursively look for merge with `target'.
+
 2002-02-14  Martin Kahlert  <martin.kahlert@infineon.com>
 
 	* include/jni.h: Fix typo.
