2001-02-14	Joel Sherrill <joel@OARcorp.com>
	* config/cpu/m68k/bits/atomicity.h: Corrected for RTEMS targets which
	do not have a CAS instruction.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49773 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_0-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2001-02-14	Joel Sherrill <joel@OARcorp.com>
+
+	* config/cpu/m68k/bits/atomicity.h: Corrected for RTEMS targets which
+	do not have a CAS instruction.
+
 2002-01-28  Jens Rehsack <rehsack@web.de>
 
 	libstdc++/3561
