--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-02-14  Alexandre Oliva  <aoliva@redhat.com>
 
+	* combine.c (known_cond): After replacing the REG of a SUBREG, try
+	to simplify it.
+
 	* function.c (assign_parms): Demote promoted argument passed by
 	transparent reference.
 
