* gcc/config.gcc (i*86-sequent-sysv4): Fix setting of tm_file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49777 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-14  Janis Johnson  <janis187@us.ibm.com>
+
+	* config.gcc (i*86-sequent-sysv4): Fix setting of tm_file.
+
 2002-02-13  Jeroen Dobbelaere  <jeroen.dobbelaere@acunia.com>
 
 	* config/arm/linux-elf.h (CPLUSPLUS_CPP_SPEC): Define.
